# runyi-growth-system

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
app/: auth.py  data_manager.py  main.py  router_views.py  rules.py  ui.py
app/legacy_pages/: 01_Task_Center.py  02_Weekly_Summary.py  03_Reward_Shop.py  04_Weekly_Growth_Report.py  05_Parent_Dashboard.py  06_Edit_Records.py
app/pages/: 01_Task_Center.py  02_Weekly_Summary.py  03_Reward_Shop.py  04_Weekly_Growth_Report.py  05_Parent_Dashboard.py
data/: daily_log.csv  points.json  redeem_log.csv  weekly_log.csv
sql/: supabase_enable_rls.sql
