[project]
name = "runyi-growth-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
]
